# cc-session

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
claude-session-manager/: .gitignore  package-lock.json  package.json
claude-session-manager/src/: App.tsx  main.tsx
claude-session-manager/src-tauri/: Cargo.toml  tauri.conf.json
claude-session-manager/src-tauri/src/: lib.rs
claude-session-manager/src/lib/: format.ts  tauri.ts  toolResults.ts  types.ts
docs/: FEATURES.md
docs/plans/: 2026-04-09-claude-session-manager.md  2026-04-13-schema-consolidation.md  2026-04-13-view-model-decoupling.md
docs/specs/: 2026-04-09-claude-session-manager-design.md  2026-04-10-live-session-monitoring-design.md  2026-04-11-session-copy-to-path-design.md  2026-04-11-terminal-multiplexer-integration-design.md  2026-04-13-schema-consolidation-design.md  2026-04-13-view-model-decoupling-design.md
src/: App.css
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/claude/: converter.rs
src-tauri/src/commands/: backups.rs  copy_session.rs  favorites.rs  images.rs  mod.rs  multiplexer.rs  projects.rs  sessions.rs  settings_io.rs  tags.rs  usage.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/models/: content.rs  message.rs  mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/parser/: content.rs  messages.rs  mod.rs
src-tauri/src/scanner/: mod.rs
src/lib/: format.ts  tauri.ts  toolResults.ts  types.ts
src/stores/: appStore.ts  liveStore.ts
(+64 files in other folders)
